--- a/public/notFound.html
+++ b/public/notFound.html
@@ -8,7 +8,7 @@
     <title>Error</title>
 </head>
 <body>
-    <a href="http://localhost:80">HOME</a>
+    <a href="/public/index.html">HOME</a>
     <h2>404: Page Not Found</h2>
     
 </body>
